--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -1270,6 +1270,7 @@
       align-items: flex-start;
       gap: 0.2604166666666667vw;
       flex-shrink: 0;
+      overflow-y: auto;
 
       .containerXSa {
         display: flex;
