--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -501,6 +501,7 @@
           flex: none;
           order: 1;
           flex-grow: 1;
+          cursor: pointer;
 
           .text {
             width: 7.87vh;
